# SentinAI-SMARTLVF

./: .env.example  .gitignore  README.md  celery_app.py  debug_state.py  main.py  optimizer_telemetry.jsonl  pyproject.toml  replay_artifacts.jsonl  requirements.txt  sentinai_state.db  telemetry_audit.json  telemetry_audit_2026_06_07.json  telemetry_audit_2026_06_14.json  test_advanced_nodes.py  test_app.py  test_auth.py  test_state.db
.chroma_data/: chroma.sqlite3
agents/: graph.py  memory.py  state.py
agents/nodes/: __init__.py  attacker.py  attackernode.md  evaluator.py  evaluatornode.md  executor.py  executornode.md  optimizer.py
api/v1/: auth.py  hitl.py  simulation.py  target.py  targets.py
config/: settings.py
core/: auth.py  mcp.py  middleware.py  mock_target.py  redis.py
database/: base.py  chroma_repo.py  sqlite_simulation_repo.py  sqlite_target_repo.py  sqlite_user_repo.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
schemas/: payload.py  response.py
static/: app.js  index.html  style.css
tasks/: simulation_worker.py
