[project]
name = "sentinai-smartlvf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "celery>=5.3.6",
    "chromadb>=0.4.24",
    "fastapi>=0.110.0",
    "langchain-core>=0.1.30",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.0.30",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=0.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.28.0",
]
